Fix errors in GUI code